@@ -24,18 +24,18 @@ CREATE INDEX ix_cache_created ON cache(created);
 
 CREATE TABLE contacts (
   contact_id integer NOT NULL PRIMARY KEY,
-  user_id integer NOT NULL default '0',
+  user_id integer NOT NULL,
   changed datetime NOT NULL default '0000-00-00 00:00:00',
   del tinyint NOT NULL default '0',
   name varchar(128) NOT NULL default '',
-  email varchar(255) NOT NULL default '',
+  email text NOT NULL default '',
   firstname varchar(128) NOT NULL default '',
   surname varchar(128) NOT NULL default '',
   vcard text NOT NULL default '',
   words text NOT NULL default ''
 );
 
-CREATE INDEX ix_contacts_user_id ON contacts(user_id, email);
+CREATE INDEX ix_contacts_user_id ON contacts(user_id, del);
 
 
 CREATE TABLE contactgroups (
